Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerBoolean.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        boolean var = true
        return var
    end
end